--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,16 +1,37 @@
-﻿<Window x:Class="WpfApp1.MainWindow"
+﻿<Window x:Name="palette" x:Class="WpfApp1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="855" Loaded="Window_Loaded" Closed="Window_Closed">
-    <Grid>
+        Title="MainWindow" Height="350" Width="716" Loaded="Window_Loaded" Closed="Window_Closed">
+    <Grid  Margin="0,0,2,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <DataGrid x:Name="myDataGrid" HorizontalAlignment="Left" Height="299" Margin="414,10,0,0" VerticalAlignment="Top" Width="423"/>
+        <DataGrid x:Name="myDataGrid" HorizontalAlignment="Left" Height="299" Margin="322,10,0,0" VerticalAlignment="Top" Width="377"/>
+        <Button Content="Добавить" HorizontalAlignment="Left" Margin="10,218,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
+        <Button Content="Обновить" HorizontalAlignment="Left" Margin="221,218,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
+        <Button Content="Сбросить" HorizontalAlignment="Left" Margin="118,254,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
+        <TabControl x:Name="TabGrid" HorizontalAlignment="Left" Height="200" Margin="10,13,0,0" VerticalAlignment="Top" Width="294">
+            <TabItem Header="Задание 1" Margin="-2,-2,-2,0">
+                <Grid Background="White" Margin="0,2,0,-2">
+                    <Button Content="T CITY" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75"/>
+                    <Button Content="T FIRM" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75"/>
+                    <TextBox x:Name="CityNameTextBox" HorizontalAlignment="Left" Height="23" Margin="128,48,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
+                    <Label x:Name="CityNameLabel" Content="Название города" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="CityNameLabel_Copy" Content="Название города" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="CityNameLabel_Copy1" Content="Название города" HorizontalAlignment="Left" Margin="10,135,0,0" VerticalAlignment="Top"/>
+                    <TextBox x:Name="CityNameTextBox_Copy" HorizontalAlignment="Left" Height="23" Margin="128,94,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
+                    <TextBox x:Name="CityNameTextBox_Copy1" HorizontalAlignment="Left" Height="23" Margin="128,139,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Задание 2" Margin="3,-2,-7,0">
+                <Grid Background="White" Margin="27,0,0,0"/>
+            </TabItem>
+        </TabControl>
+        <Button Content="Удалить" HorizontalAlignment="Left" Margin="222,287,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
 
     </Grid>
 </Window>
