Так на сегодня закончим

--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,33 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="716" Loaded="Window_Loaded" Closed="Window_Closed">
+        Title="MainWindow" Height="350" Width="1019" Loaded="Window_Loaded" Closed="Window_Closed">
     <Grid  Margin="0,0,2,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <DataGrid x:Name="myDataGrid" HorizontalAlignment="Left" Height="299" Margin="322,10,0,0" VerticalAlignment="Top" Width="377"/>
-        <Button Content="Добавить" HorizontalAlignment="Left" Margin="10,218,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
-        <Button Content="Обновить" HorizontalAlignment="Left" Margin="221,218,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
-        <Button Content="Сбросить" HorizontalAlignment="Left" Margin="118,254,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
+        <DataGrid x:Name="myDataGrid" HorizontalAlignment="Left" Height="299" Margin="322,10,0,0" VerticalAlignment="Top" Width="678"/>
+        <Button x:Name="AddBtn" Content="Добавить" HorizontalAlignment="Left" Margin="10,218,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="AddBtn_Click"/>
+        <Button x:Name="UpdateBtn" Content="Обновить" HorizontalAlignment="Left" Margin="221,218,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
+        <Button x:Name="ResetBtn" Content="Сбросить" HorizontalAlignment="Left" Margin="120,218,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
         <TabControl x:Name="TabGrid" HorizontalAlignment="Left" Height="200" Margin="10,13,0,0" VerticalAlignment="Top" Width="294">
-            <TabItem Header="Задание 1" Margin="-2,-2,-2,0">
+            <TabItem Header="Задание 1" Margin="-2,-2,-2,0" MouseLeftButtonDown="TabItem_MouseLeftButtonDown">
                 <Grid Background="White" Margin="0,2,0,-2">
-                    <Button Content="T CITY" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75"/>
-                    <Button Content="T FIRM" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75"/>
-                    <TextBox x:Name="CityNameTextBox" HorizontalAlignment="Left" Height="23" Margin="128,48,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
+                    <Button x:Name="CityBtnTable" Content="T CITY" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75" MouseLeftButtonDown="Button_MouseLeftButtonDown" Click="CityBtnTable_Click"/>
+                    <Button x:Name="FirmBtnTable" Content="T FIRM" HorizontalAlignment="Left" Margin="170,10,0,0" VerticalAlignment="Top" Width="75" Click="FirmBtnTable_Click"/>
+                    <TextBox x:Name="CityNameTextBox" HorizontalAlignment="Left" Height="23" Margin="128,48,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150"/>
                     <Label x:Name="CityNameLabel" Content="Название города" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top"/>
-                    <Label x:Name="CityNameLabel_Copy" Content="Название города" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top"/>
-                    <Label x:Name="CityNameLabel_Copy1" Content="Название города" HorizontalAlignment="Left" Margin="10,135,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="CityNameTextBox_Copy" HorizontalAlignment="Left" Height="23" Margin="128,94,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
-                    <TextBox x:Name="CityNameTextBox_Copy1" HorizontalAlignment="Left" Height="23" Margin="128,139,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
+                    <Label x:Name="CityNameJURLabel" Content="Город Юр" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="CityNamePostLabel" Content="Город Пч" HorizontalAlignment="Left" Margin="10,135,0,0" VerticalAlignment="Top"/>
+                    <TextBox x:Name="CityNameJurTextBox" HorizontalAlignment="Left" Height="23" Margin="128,94,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150"/>
+                    <TextBox x:Name="CityNamePostTextBox" HorizontalAlignment="Left" Height="23" Margin="128,139,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150"/>
+                    <Button x:Name="CityFindBtnTable" Content="Find" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" MouseLeftButtonDown="Button_MouseLeftButtonDown" Click="CityBtnFindTable_Click"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Задание 2" Margin="3,-2,-7,0">
-                <Grid Background="White" Margin="27,0,0,0"/>
+            <TabItem Header="Задание 2" Margin="3,-2,-7,0" MouseLeftButtonDown="TabItem_MouseLeftButtonDown_1" ContextMenuOpening="TabItem_ContextMenuOpening" IsEnabledChanged="TabItem_IsEnabledChanged" ContextMenuClosing="TabItem_ContextMenuClosing" MouseEnter="TabItem_MouseEnter" MouseLeftButtonUp="TabItem_MouseLeftButtonUp">
+                <Grid Background="White">
+                    <Button x:Name="AddRandBtn" Content="Сгенерировать значение" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="AddRandBtn_Click"/>
+                </Grid>
             </TabItem>
         </TabControl>
-        <Button Content="Удалить" HorizontalAlignment="Left" Margin="222,287,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
+        <Button x:Name="DeleteBtn" Content="Удалить" HorizontalAlignment="Left" Margin="229,289,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
+        <Button x:Name="FindBtn" Content="Найти" HorizontalAlignment="Left" Margin="229,218,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="FindBtn_Click"/>
 
     </Grid>
 </Window>
